fixed shadow clipping. fixed camera dislocation.

--- a/css/main.css
+++ b/css/main.css
@@ -3,30 +3,3 @@ body {
     height: 100vh;
     overflow: hidden;
 }
-
-.info {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    background: rgb(38,0,177);
-    background: linear-gradient(0deg, rgba(38,0,177,0.5) 0%, rgba(61,4,159,0.3) 44%, rgba(11,7,144,0) 100%);
-}
-
-.info-wrapper {
-    width: 600px;
-    text-align: center;
-    color: #ffffff;
-    padding: 40px;
-}
-
-.title {
-    margin-bottom: 1rem;
-    font-weight: bold;
-    font-family: sans-serif;
-}
-
-.subtitle {
-    font-family: monospace;
-}
